--- a/index.html
+++ b/index.html
@@ -3,21 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        #box {
-            width: 200px;
-            height: 200px;
-
-        }
-    </style>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<div id="box"></div>
+<div id="wrap">
+    <header class="header">
+        <div class="header-main">
+          <h1 class="logo">
+              <img src="img/logo.png" alt="">
+          </h1>
+            <img class="music-iocn" src="img/musicoff.gif" alt="">
+
+            <ul class="nav">
+                <li>
+                    <h3 class="up">
+                        <img src="./img/home.png" alt="">
+                    </h3>
+                    <h3 class="down">
+                        <img src="./img/home_gruen.png" alt="">
+                    </h3>
+                </li>
+
+                <li>
+                    <h3 class="up">Course</h3>
+                    <h3 class="down">Course</h3>
+                </li>
+                <li>
+                    <h3 class="up">Works</h3>
+                    <h3 class="down">Works</h3>
+                </li>
+                <li>
+                     <h3 class="up">About</h3>
+                     <h3 class="down">About</h3>
+                </li>
+                <li>
+                     <h3 class="up">Team</h3>
+                     <h3 class="down">Team</h3>
+                </li>
+            </ul>
+
+
+        </div>
+
+    </header>
+
+
+</div>
 </body>
 <script type="text/javascript">
     window.onload = function () {
