--- a/index.html
+++ b/index.html
@@ -41,20 +41,26 @@
                      <h3 class="down">Team</h3>
                 </li>
             </ul>
+            <div class="arrows">
 
+            </div>
+       </div>
+  </header>
 
-        </div>
-
-    </header>
+    <div class="content">
+        <ul class="content-main">
+            <li><section>home</section></li>
+            <li><section>course</section></li>
+            <li><section>works</section></li>
+            <li><section>about</section></li>
+            <li><section>team</section></li>
+        </ul>
+    </div>
 
 
 </div>
+
+<script src="./js/index.js" type="text/javascript"></script>
 </body>
-<script type="text/javascript">
-    window.onload = function () {
-        var box = document.getElementById('box');
 
-
-    }
-</script>
 </html>
