--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 <div id="wrap">
     <header class="header">
         <div class="header-main">
-          <h1 class="logo">
-              <img src="img/logo.png" alt="">
-          </h1>
-            <img class="music-iocn" src="img/musicoff.gif" alt="">
-
+            <h1 class="logo">
+                <img src="./img/logo.png" alt="logo">
+            </h1>
+            <img class="music-icon" src="./img/musicon.gif" alt="music_icon">
             <ul class="nav">
                 <li>
                     <h3 class="up">
-                        <img src="./img/home.png" alt="">
+                        <img src="./img/home.png" alt="home">
                     </h3>
                     <h3 class="down">
-                        <img src="./img/home_gruen.png" alt="">
+                        <img src="./img/home_gruen.png" alt="home">
                     </h3>
                 </li>
-
                 <li>
                     <h3 class="up">Course</h3>
                     <h3 class="down">Course</h3>
@@ -33,31 +31,42 @@
                     <h3 class="down">Works</h3>
                 </li>
                 <li>
-                     <h3 class="up">About</h3>
-                     <h3 class="down">About</h3>
+                    <h3 class="up">About</h3>
+                    <h3 class="down">About</h3>
                 </li>
                 <li>
-                     <h3 class="up">Team</h3>
-                     <h3 class="down">Team</h3>
+                    <h3 class="up">Team</h3>
+                    <h3 class="down">Team</h3>
                 </li>
             </ul>
-            <div class="arrows">
-
-            </div>
-       </div>
-  </header>
-
+            <div class="arrow"></div>
+        </div>
+    </header>
     <div class="content">
         <ul class="content-main">
-            <li><section>home</section></li>
+            <li>
+                <section class="home">
+                   <!-- <ul class="home-carousel">
+                        <li class="common-title active">One layer</li>
+                        <li class="common-title">Two layer</li>
+                        <li class="common-title">Three layer</li>
+                        <li class="common-title">Four layer</li>
+                    </ul>
+                    <ul class="home-point">
+                        <li class="active"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>-->
+                    1212
+                </section>
+            </li>
             <li><section>course</section></li>
             <li><section>works</section></li>
             <li><section>about</section></li>
             <li><section>team</section></li>
         </ul>
     </div>
-
-
 </div>
 
 <script src="./js/index.js" type="text/javascript"></script>
