--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="content-main">
             <li>
                 <section class="home">
-                   <!-- <ul class="home-carousel">
+                   <ul class="home-carousel">
                         <li class="common-title active">One layer</li>
                         <li class="common-title">Two layer</li>
                         <li class="common-title">Three layer</li>
@@ -57,8 +57,8 @@
                         <li></li>
                         <li></li>
                         <li></li>
-                    </ul>-->
-                    1212
+                    </ul>
+
                 </section>
             </li>
             <li><section>course</section></li>
