--- a/index.html
+++ b/index.html
@@ -61,7 +61,79 @@
 
                 </section>
             </li>
-            <li><section>course</section></li>
+            <li>
+                <section class="course">
+                <h2 class="course-title common-title">
+                    <span>EINIGE</span></br>
+                    <span>UNSERER</span></br>
+                    <span>KUNDEN</span>
+                </h2>
+                <p class="course-content common-text">Das Kundenvertrauen in unsere Kompetenz ist die notwendige Basis einer erfolgreichen Zusammenarbeit, gleichzeitig aber auch das größte Lob, das man uns entgegenbringen kann.
+                    <br>
+                Diese und viele weitere große und kleine Kunden vertrauen uns seit Jahren, was uns stolz macht, und dafür sagen wir an dieser Stelle einfach mal.</p>
+                <ul class="course-List">
+                   <li>
+                    <div class="front"></div>
+                    <div class="back">个人你把他你不是我</div>
+                  </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+                    <li>
+                        <div class="front"></div>
+                        <div class="back">个人你把他你不是我</div>
+                    </li>
+
+                </ul>
+                   <ul class="course-line">
+                       <li></li>
+                       <li></li>
+                       <li></li>
+                       <li></li>
+                       <li></li>
+                   </ul>
+
+            </section>
+             </li>
+
+
             <li><section>works</section></li>
             <li><section>about</section></li>
             <li><section>team</section></li>
